--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -24543,3 +24543,24 @@ background-size: cover;
     text-transform: capitalize;
     text-align: center;
 }
+
+.dlink {
+  text-decoration: none !important;
+  color: #03a9f3 !important;
+}
+
+.data-table-extensions-filter {
+  border: 1px solid lightgray;
+  border-radius: 50px;
+  padding: 3px 5px;
+  width: 70%;
+}
+
+.first {
+  padding-right: 10px !important;
+}
+
+.filter-text {
+  border: none !important;
+  width: 80%;
+}
