--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -24565,3 +24565,30 @@ background-size: cover;
   width: 80%;
 }
 .loading{padding-left: '35%'; padding-Top: '5%'}
+
+.ticker {
+    position: absolute;
+    width: 100%;
+    height: 40px;
+    z-index: 1;
+ }
+ .ticker__field {
+    position: fixed;
+    top: 50px;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgb(35, 35, 35); 
+    opacity: 0.85;
+    text-rendering: optimizeLegibility;
+    -webkit-font-smoothing: subpixel-antialiased;
+ }
+ .ticker__field__text {
+    line-height: 50px;
+    font-size: 14px;
+    vertical-align: middle;
+    white-space: nowrap;
+    margin-left: 3rem;
+    padding-top: 0px;
+    height: 40px;
+ }
