--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -24293,10 +24293,10 @@ div.dtk-focus-alt table.dataTable tbody th.focus {
     margin: 5px 15px;
     height: 200px;
     width: 200px;
-    /* border-left: 1px solid gray;
+    border-left: 1px solid gray;
     border-right: 1px solid gray;
-    border-top: 5px solid gray;
-    border-bottom: 5px solid gray; */
+    border-top: 1px solid gray;
+    border-bottom: 1px solid gray;
     border-radius:1px;
     object-fit: contain;
     
