--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -25238,7 +25238,7 @@ background-size: cover;
     padding: 20px;
     background: #fff;
     border-radius: 5px;
-    width: 30%;
+    width: auto;
     position: relative;
     transition: all 5s ease-in-out;
   }
@@ -25271,4 +25271,22 @@ background-size: cover;
     .popup {
       width: 70%;
     }
+  }
+
+  /* For pdf */
+.react-pdf__Page {
+    margin-top: 10px;
+  }
+  .react-pdf__Page__textContent {
+    border: 1px solid darkgrey;
+    box-shadow: 5px 5px 5px 1px #ccc;
+    border-radius: 5px;
+  }
+  
+  .react-pdf__Page__annotations.annotationLayer {
+    padding: 20px;
+  }
+  
+  .react-pdf__Page__canvas {
+    margin: 0 auto;
   }
