--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -24302,6 +24302,20 @@ div.dtk-focus-alt table.dataTable tbody th.focus {
     
     
   }
+  .previewImg{
+    text-align: center;
+    margin: 5px 15px;
+    height: 80px;
+    width: 80px;
+    border-left: 1px solid gray;
+    border-right: 1px solid gray;
+    border-top: 1px solid gray;
+    border-bottom: 1px solid gray;
+    border-radius:1px;
+    object-fit: contain;
+    
+    
+  }
 .imgPreview  img{
 
     width: 100%;
